# uoj-data-converter

./: CHANGELOG.md  CMakeLists.txt  README.md
.ci/linux/: uoj-data-converter.desktop
.ci/win/: win-setup.iss
.github/workflows/: build_test.yml  check_format.yml  push_aur.yml  release.yml  release_aur.yml  release_checksums.yml
aur/git/: .SRCINFO  PKGBUILD
aur/release/: .SRCINFO  PKGBUILD
cmake/: Info.plist.in  version.hpp.in
resources/: resources.qrc
src/: ErrorLabel.cpp  Guide.hpp  MainWindow.cpp  MainWindow.hpp  SubtaskPage.cpp  SubtaskPage.hpp  TestCaseChoosePage.cpp  TestCaseChoosePage.hpp  TestCaseConvertPage.cpp  TestCaseConvertPage.hpp  main.cpp  version.hpp.in
src/Models/: ConvertedTestCaseModel.hpp  ExampleModel.hpp  OriginalTestCaseModel.hpp  ProblemConfModel.hpp  ResultModel.hpp  StdModel.hpp  SubtaskModel.hpp
src/Pages/: CommitOperationPage.cpp  CommitOperationPage.hpp  ExamplePage.cpp  ExamplePage.hpp  FinishPage.cpp  FinishPage.hpp  ProblemConfPage.cpp  ProblemConfPage.hpp  StdPage.cpp  StdPage.hpp  SubtaskPage.cpp  SubtaskPage.hpp  TestCaseChoosePage.cpp  TestCaseChoosePage.hpp  TestCaseConvertPage.cpp  TestCaseConvertPage.hpp
src/Widgets/: AcceptsDropEdit.cpp  AcceptsDropEdit.hpp  ErrorLabel.cpp  ErrorLabel.hpp  ListWidget.cpp  ListWidget.hpp
